--- a/noticias-cidade/css/estilo.css
+++ b/noticias-cidade/css/estilo.css
@@ -17,7 +17,7 @@ body{
 #topo {
     height: 150px;
     background: url(../imagens/detalhe-topo.png) no-repeat right top;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
     padding-top: 15px;
 }
 
@@ -26,4 +26,48 @@ body{
     height: 66px;
     background: url(../imagens/logo.png) no-repeat; 
     text-indent: -3000px;
+}
+
+ul  {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+#topo ul {
+    margin-top: 30px;
+    background: #b10333;
+    float: left;
+}
+
+#topo ul li {
+    float: left;
+}
+
+#topo ul a {
+    font-size: 0.9em;
+    display: block;
+    padding: 0.5em 1.5em;
+    line-height: 2.1em;
+    text-decoration: none;
+    color: #fff;
+    background: url(../imagens/divisor.png) no-repeat left center;
+}
+
+#topo ul .primeiro a {
+    background: none;
+}
+
+#topo ul a:hover {
+    color: #69001d;
+}
+
+body.home #navegacao a#home,
+body.brasil #navegacao a#brasil,
+body.internacional #navegacao a#internacional,
+body.fotos #navegacao a#fotos
+{
+    color: #fff;
+    background: #de003e;
+    cursor: text;
 }
