--- a/noticias-cidade/css/estilo.css
+++ b/noticias-cidade/css/estilo.css
@@ -71,3 +71,41 @@ body.fotos #navegacao a#fotos
     background: #de003e;
     cursor: text;
 }
+
+#conteudo {
+    margin-top: 60px;
+    background: #f5f5f5;
+}
+
+#primario {
+    width: 270px;
+    background: blue;
+    margin: 0 0 20px 195px ;
+    float: left;
+}
+
+#secundario {
+    width: 270px;
+    background: green;
+    margin: 0px 0px 20px 15px;
+    float: left;
+}
+
+#lateral {
+    width: 180px;
+    background: yellow;
+    margin: 0 0 20px -750px;
+    float: left;
+}
+
+/*Rodape*/
+#container-rodape {
+    background: #294c71;
+    padding: 20px;
+}
+
+#rodape {
+    width: 750px;
+    margin: 0 auto;
+    color: #fff;
+}
