--- a/noticias-cidade/css/estilo.css
+++ b/noticias-cidade/css/estilo.css
@@ -77,26 +77,46 @@ body.fotos #navegacao a#fotos
     background: #f5f5f5;
 }
 
-#primario {
+#tres-colunas #primario {
     width: 270px;
     background: blue;
     margin: 0 0 20px 195px ;
     float: left;
 }
 
+#duas-colunas #primario {
+    width: 555px;
+    background: blue;
+    margin: 0 0 120px 195px ;
+    float: left;
+}
+
+#primario {
+    width: 270px;
+    background: blue;
+    margin: 15px 0 20px 195px ;
+    float: left;
+}
+
 #secundario {
     width: 270px;
     background: green;
-    margin: 0px 0px 20px 15px;
+    margin: 15px 0px 20px 15px;
     float: left;
 }
 
 #lateral {
     width: 180px;
-    background: yellow;
     margin: 0 0 20px -750px;
     float: left;
 }
+
+.caixa {
+    background: #f3f3f3 url(../imagens/fundo-caixa.png);
+    padding: 5px;
+    margin: 10px 0px;
+}
+
 
 /*Rodape*/
 #container-rodape {
@@ -108,4 +128,17 @@ body.fotos #navegacao a#fotos
     width: 750px;
     margin: 0 auto;
     color: #fff;
+}
+
+h2 {
+    font-size: 1.1em;
+    background: #294c71;
+    color: #fff;
+    padding: 5px;
+}
+
+.caixa-conteudo {
+    background: #fff;
+    margin-top: 5px;
+    padding: 5px;
 }
