--- a/noticias-cidade/css/estilo.css
+++ b/noticias-cidade/css/estilo.css
@@ -14,6 +14,10 @@ body{
     margin:0 auto; 
 }
 
+#rodape {
+    padding-left: 430px;
+}
+
 #topo {
     height: 150px;
     background: url(../imagens/detalhe-topo.png) no-repeat right top;
@@ -77,30 +81,20 @@ body.fotos #navegacao a#fotos
     background: #f5f5f5;
 }
 
-#tres-colunas #primario {
-    width: 270px;
-    background: blue;
-    margin: 0 0 20px 195px ;
-    float: left;
-}
-
 #duas-colunas #primario {
     width: 555px;
-    background: blue;
     margin: 0 0 120px 195px ;
     float: left;
 }
 
 #primario {
     width: 270px;
-    background: blue;
     margin: 15px 0 20px 195px ;
     float: left;
 }
 
 #secundario {
     width: 270px;
-    background: green;
     margin: 15px 0px 20px 15px;
     float: left;
 }
@@ -117,6 +111,58 @@ body.fotos #navegacao a#fotos
     margin: 10px 0px;
 }
 
+img.imagem-principal{
+    width: 98%;
+    border: 3px solid #dfdfdf;
+}
+
+h3 {
+    text-transform: uppercase;
+    display: inline;
+    font-size: 0.8em;
+    padding: 3px;
+}
+
+.destaque h3 {
+        background-color: #b10333;
+        color: #fff;
+}
+
+.entrevista h3 {
+    background-color: #de003e;
+}
+
+/*Formatando lista de notícias*/
+#lista-noticias li {
+    padding-left: 2px;
+    border-bottom: 1px solid #ccc;
+    height: 65px;
+}
+
+#lista-noticias li a img {
+    float: left;
+    margin: 5px;
+}
+
+#lista-noticias li a {
+    text-decoration: none;
+    font-size: 0.8em;
+}
+
+#lista-noticias li a h3 {
+    font-size: 0.9em;
+    padding: 0;
+    color: #3e7ab9;
+}
+
+#lista-noticias li a p {
+    font-size: 0.8em;
+}
+
+#lista-noticias li:hover {
+    background: #eee;
+    cursor: pointer;
+}
 
 /*Rodape*/
 #container-rodape {
@@ -179,3 +225,4 @@ input.submit {
     border: 2px solid #870529;
     padding: 5px;
 }
+
